--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="keywords" content="Mayur Nandkishor Phatanagre, Mayur Phatanagre GitHub, may-ai github, mayur-ai GitHub, 
-        mayuu-ai, mayurphatangare, Mayur ph m, mayuu, Artificial Intelligence, AI, Deep Learning, Machine Learning, DL, ML, 
+        <meta name="keywords" content="Jayashri Appasaheb Vyavahare, Jayashri Vyavahare GitHub, jay-ai github, jayashri-ai GitHub, 
+        jayu-ai, jayashrivyavahare, Jayashri, jv, j, jayuu, Artificial Intelligence, AI, Deep Learning, Machine Learning, DL, ML, 
         Web, web, app, developer, github, git, projects, tutorials, keywords, seo, artificial intelligence, deep learning, machine learning, 
         dl, ml, deeplearning, machinelearning, DeepLearning, MachineLearning, Cybersecurity, cybersecurity, research, machine learning india, 
-        india, R&D, Mayur, mp-ai, mayurai,mpAI,CV Image processing">
-        <meta name="author" content="mayur Phatanagre">
-        <meta name="description" content="Hey there! I'm Mayur. I'm Artificial intelligence Developer from India.">
-        <title>mayur_portfolio</title>
+        india, R&D, Jayashri, jv-ai, jayashriai,jvAI,CV Image processing">
+        <meta name="author" content="jayashri Vyavahare">
+        <meta name="description" content="Hey there! I'm Jayashri. I'm Artificial intelligence Developer from India.">
+        <title>jayashri_portfolio</title>
         <!-- font icons -->
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
         <link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/x-icon">
         <!-- Bootstrap + Meyawo main styles -->
-        <link rel="stylesheet" href="assets/css/mayur_portfolio.css">
+        <link rel="stylesheet" href="assets/css/jayashri_portfolio.css">
         <!-- <link rel="stylesheet" href="assets/css/experince_style.css"> -->
 
     </head>
@@ -26,7 +26,7 @@
         <!-- Page Navbar -->
         <nav class="custom-navbar" data-spy="affix" data-offset-top="20">
             <div class="container">
-                <!-- <a class="logo" href="#">Mayur <p class="small-text">Say Hello to the future !</p> -->
+                <!-- <a class="logo" href="#">Jayashri <p class="small-text">Say Hello to the future !</p> -->
                 <a class="logo" href="">Mayur!</a>
                 <ul class="nav">
                     <li class="item">
@@ -82,7 +82,7 @@
                                 <span class="smaller-text">I am</span>
 
                                 <span class="larger-text">
-                                    <span class="animated-name">Mayur Phatangare</span>
+                                    <span class="animated-name">Jayashri Vyavahare</span>
                                 </span>
                             </span>
                         </span>
@@ -122,7 +122,7 @@
                         <p class="section-subtitle">Who Am I ?</p>
                         <h2 class="section-title mb-3">About Me</h2>
                         <p>
-                            Hi there! I'm Mayur Nandkishor Phatanagre, a passionate Artificial Intelligence developer with a strong background in physics and data science. My journey into AI began with a curiosity to explore the endless possibilities of this rapidly evolving field.
+                            Hi there! I'm Jayashri Appasaheb Vyavahare, a passionate Artificial Intelligence developer with a strong background in physics and data science. My journey into AI began with a curiosity to explore the endless possibilities of this rapidly evolving field.
                             <br><br>
                             I hold a Bachelor's degree in Physics, and I've furthered my education with a Post-Graduation Diploma in Data Science and Machine Learning. I've earned certifications in Python, Data Science, Machine Learning, and Deep Learning. These learning experiences have equipped me with a solid foundation to tackle complex AI challenges.
                             <br><br>
