--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav class="custom-navbar" data-spy="affix" data-offset-top="20">
             <div class="container">
                 <!-- <a class="logo" href="#">Jayashri <p class="small-text">Say Hello to the future !</p> -->
-                <a class="logo" href="">Mayur!</a>
+                <a class="logo" href="">Jayashri!</a>
                 <ul class="nav">
                     <li class="item">
                         <a class="link" href="#" id="homeButton" >Home</a>
