--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         Web, web, app, developer, github, git, projects, tutorials, keywords, seo, artificial intelligence, deep learning, machine learning, 
         dl, ml, deeplearning, machinelearning, DeepLearning, MachineLearning, Cybersecurity, cybersecurity, research, machine learning india, 
         india, R&D, Jayashri, jv-ai, jayashriai,jvAI,CV Image processing">
-        <meta name="author" content="jayashri Vyavahare">
+        <meta name="author" content="mayur Phatanagre">
         <meta name="description" content="Hey there! I'm Jayashri. I'm Artificial intelligence Developer from India.">
-        <title>jayashri_portfolio</title>
+        <title>mayur_portfolio</title>
         <!-- font icons -->
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
         <link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/x-icon">
@@ -26,7 +26,7 @@
         <!-- Page Navbar -->
         <nav class="custom-navbar" data-spy="affix" data-offset-top="20">
             <div class="container">
-                <!-- <a class="logo" href="#">Jayashri <p class="small-text">Say Hello to the future !</p> -->
+                <!-- <a class="logo" href="#">Mayur <p class="small-text">Say Hello to the future !</p> -->
                 <a class="logo" href="">Jayashri!</a>
                 <ul class="nav">
                     <li class="item">
@@ -82,7 +82,7 @@
                                 <span class="smaller-text">I am</span>
 
                                 <span class="larger-text">
-                                    <span class="animated-name">Jayashri Vyavahare</span>
+                                    <span class="animated-name">Jayashri Phatangare</span>
                                 </span>
                             </span>
                         </span>
@@ -826,7 +826,7 @@
                         <p class="m-0 text-light">Always feel Free to Contact & Hire me</p>
                     </div>
                     <div class="col-sm offset-sm-2 offset-md-3">
-                        <button class="btn btn-lg my-font btn-light rounded"><a href="mailto:mnphatangare8@gmail.com">Hire Me</a></button>
+                        <button class="btn btn-lg my-font btn-light rounded"><a href="mailto:jayashrivyavahare.267@gmail.com">Hire Me</a></button>
                     </div>
                 </div> <!-- end of row -->
             </div> <!-- end of container -->
@@ -902,15 +902,15 @@
                 <h6 class="section-title mb-6">Contact Me</h6>
                 <div class="contact-icons">
                     <div class="contact-icon">
-                        <a href="mailto:mnphatangare8@gmail.com">
+                        <a href="mailto:jayashrivyavahare.267@gmail.com">
                             <i class="uil uil-envelope"></i>
-                            <p>mnphatangare8@gmail.com</p>
+                            <p>jayashrivyavahare.267@gmail.com</p>
                         </a>
                     </div>
                     <div class="contact-icon">
                         <a href="https://www.linkedin.com/in/mayur-phatangare-ba874821b/">
                             <i class="uil uil-linkedin"></i>
-                            <p>Mayur Phatangare</p>
+                            <p>Jayashri Vyavahare</p>
                         </a>
                         
                     </div>
