--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         Web, web, app, developer, github, git, projects, tutorials, keywords, seo, artificial intelligence, deep learning, machine learning, 
         dl, ml, deeplearning, machinelearning, DeepLearning, MachineLearning, Cybersecurity, cybersecurity, research, machine learning india, 
         india, R&D, Jayashri, jv-ai, jayashriai,jvAI,CV Image processing">
-        <meta name="author" content="mayur Phatanagre">
+        <meta name="author" content="jayshri Phatanagre">
         <meta name="description" content="Hey there! I'm Jayashri. I'm Artificial intelligence Developer from India.">
-        <title>mayur_portfolio</title>
+        <title>jayashri_portfolio</title>
         <!-- font icons -->
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
         <link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/x-icon">
@@ -26,7 +26,7 @@
         <!-- Page Navbar -->
         <nav class="custom-navbar" data-spy="affix" data-offset-top="20">
             <div class="container">
-                <!-- <a class="logo" href="#">Mayur <p class="small-text">Say Hello to the future !</p> -->
+                <!-- <a class="logo" href="#">Jayashri <p class="small-text">Say Hello to the future !</p> -->
                 <a class="logo" href="">Jayashri!</a>
                 <ul class="nav">
                     <li class="item">
@@ -775,41 +775,41 @@
 
                 <div class="projects" data-aos="fade-up" data-aos-duration="1500">
 
-                    <div class="repo-card" data-repo="001Mayur/python_projects"></div>
+                    <div class="repo-card" data-repo="001Jayashri/python_projects"></div>
 
-                    <div class="repo-card" data-repo="001Mayur/AI_voice_Assistance"></div>
+                    <div class="repo-card" data-repo="001Jayashri/AI_voice_Assistance"></div>
                     
                     <div
                         class="repo-card"
-                        data-repo="001Mayur/Data_EDA">
+                        data-repo="001Jayashri/Data_EDA">
                     </div>
                     <div
                         class="repo-card"
-                        data-repo="001Mayur/Object_Detection_project">
+                        data-repo="001Jayashri/Object_Detection_project">
                     </div>
                     <div 
                         class="repo-card" 
-                        data-repo="001Mayur/Number_plate_detection_recognition">
+                        data-repo="001Jayshri/Number_plate_detection_recognition">
                     </div>
                     <div 
                         class="repo-card" 
-                        data-repo="001Mayur/plant_detection_and_Image_Processing">
+                        data-repo="001Jayashi/plant_detection_and_Image_Processing">
                     </div>
                     <div 
                         class="repo-card" 
-                        data-repo="001Mayur/object_tracking ">
+                        data-repo="001Jayashri/object_tracking ">
                     </div>
                     <div 
                         class="repo-card" 
-                        data-repo="001Mayur/deep_learning_project">
+                        data-repo="001Jayashri/deep_learning_project">
                     </div>
                     <div 
                         class="repo-card" 
-                        data-repo="001Mayur/face_recognition">
+                        data-repo="001Jayashri/face_recognition">
                     </div>
                     <div 
                         class="repo-card" 
-                        data-repo="001Mayur/plants_chat-bot">
+                        data-repo="001Jayashri/plants_chat-bot">
                     </div>
                 </div>
             </div>
@@ -1141,7 +1141,7 @@
             <div class="footer__bg">
                 <div class="footer__container container grid">
                     <div class="footer__left">
-                        <h1 class="footer__title">Mayur Phatangare</h1>
+                        <h1 class="footer__title">Jayashri Phatangare</h1>
                         <span class="footer__subtitle">AI Developer</span>
                     </div>
 
@@ -1150,7 +1150,7 @@
                         <a href="#Projects" class="footer__link">Project</a>
                         <a href="#contact" class="footer__link">Contact</a>
 
-                        <a href="https://github.com/001Mayur" target="_blank" class="footer__social">
+                        <a href="https://github.com/001Jayashri" target="_blank" class="footer__social">
                             <i class="uil uil-github-alt"></i>
                         </a>
                         <a href="https://www.linkedin.com/in/mayur-phatangare-ba874821b/" target="_blank" class="footer__social">
@@ -1163,7 +1163,7 @@
                         <i class="uil uil-arrow-up scrollup__icon"></i>
                     </a>
                 </div>
-            <p class="footer__copy">&#169; Mayur Phatangare. All rights reserved.</p>
+            <p class="footer__copy">&#169; Jayashri Phatangare. All rights reserved.</p>
             </div>
         </footer>
         
@@ -1176,7 +1176,7 @@
         <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
 
         <!-- Meyawo js -->
-        <script src="assets/js/main-mayur.js"></script>
+        <script src="assets/js/main-jayashri.js"></script>
         <script src="assets/js/repo-card.js"></script>
 
 
