--- a/index.html
+++ b/index.html
@@ -775,41 +775,41 @@
 
                 <div class="projects" data-aos="fade-up" data-aos-duration="1500">
 
-                    <div class="repo-card" data-repo="001Jayashri/python_projects"></div>
+                    <div class="repo-card" data-repo="JayashriVS20/python_projects"></div>
 
-                    <div class="repo-card" data-repo="001Jayashri/AI_voice_Assistance"></div>
+                    <div class="repo-card" data-repo="JayashriVS20/AI_voice_Assistance"></div>
                     
                     <div
                         class="repo-card"
-                        data-repo="001Jayashri/Data_EDA">
+                        data-repo="JayashriVS20/Data_EDA">
                     </div>
                     <div
                         class="repo-card"
-                        data-repo="001Jayashri/Object_Detection_project">
+                        data-repo="JayashriVS20/Object_Detection_project">
                     </div>
                     <div 
                         class="repo-card" 
-                        data-repo="001Jayshri/Number_plate_detection_recognition">
+                        data-repo="JayashriVS20/Number_plate_detection_recognition">
                     </div>
                     <div 
                         class="repo-card" 
-                        data-repo="001Jayashi/plant_detection_and_Image_Processing">
+                        data-repo="JayashriVS20/plant_detection_and_Image_Processing">
                     </div>
                     <div 
                         class="repo-card" 
-                        data-repo="001Jayashri/object_tracking ">
+                        data-repo="JayashriVS20/object_tracking ">
                     </div>
                     <div 
                         class="repo-card" 
-                        data-repo="001Jayashri/deep_learning_project">
+                        data-repo="JayashriVS20/deep_learning_project">
                     </div>
                     <div 
                         class="repo-card" 
-                        data-repo="001Jayashri/face_recognition">
+                        data-repo="JayashriVS20/face_recognition">
                     </div>
                     <div 
                         class="repo-card" 
-                        data-repo="001Jayashri/plants_chat-bot">
+                        data-repo="JayashriVS20/plants_chat-bot">
                     </div>
                 </div>
             </div>
