--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                 <span class="smaller-text">I am</span>
 
                                 <span class="larger-text">
-                                    <span class="animated-name">Jayashri Phatangare</span>
+                                    <span class="animated-name">Jayashri Vyavahare</span>
                                 </span>
                             </span>
                         </span>
@@ -1141,7 +1141,7 @@
             <div class="footer__bg">
                 <div class="footer__container container grid">
                     <div class="footer__left">
-                        <h1 class="footer__title">Jayashri Phatangare</h1>
+                        <h1 class="footer__title">Jayashri Vyavahare</h1>
                         <span class="footer__subtitle">AI Developer</span>
                     </div>
 
@@ -1163,7 +1163,7 @@
                         <i class="uil uil-arrow-up scrollup__icon"></i>
                     </a>
                 </div>
-            <p class="footer__copy">&#169; Jayashri Phatangare. All rights reserved.</p>
+            <p class="footer__copy">&#169; Jayashri Vyavahare. All rights reserved.</p>
             </div>
         </footer>
         
