--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
                         <p class="section-subtitle">Who Am I ?</p>
                         <h2 class="section-title mb-3">About Me</h2>
                         <p>
-                            Hi there! I'm Jayashri Appasaheb Vyavahare, a passionate Artificial Intelligence developer with a strong background in physics and data science. My journey into AI began with a curiosity to explore the endless possibilities of this rapidly evolving field.
+                            Hi there! I'm Jayashri Appasaheb Vyavahare, a passionate Artificial Intelligence developer with a strong background in Computer Application and data science. My journey into AI began with a curiosity to explore the endless possibilities of this rapidly evolving field.
                             <br><br>
-                            I hold a Bachelor's degree in Physics, and I've furthered my education with a Post-Graduation Diploma in Data Science and Machine Learning. I've earned certifications in Python, Data Science, Machine Learning, and Deep Learning. These learning experiences have equipped me with a solid foundation to tackle complex AI challenges.
+                            I hold a Master dregree in Computer Application, and I've furthered my education with a Post-Graduation Diploma in Data Science and Machine Learning. I've earned certifications as well as participating different type of Workshops and Seminars. These learning experiences have equipped me with a solid foundation to tackle complex AI challenges.
                             <br><br>
                             During my professional journey, I completed two internships that provided me hands-on experience. In my first internship, I worked on image processing and machine learning tasks, gaining practical insights into data processing and analysis. In the second internship, I collaborated with cross-functional teams to develop a computer vision module for vehicle registration number detection and retention forecasting. This experience honed my skills in real-world AI applications.
                             <br><br>
-                            As an Artificial Intelligence developer at Quantum Technology, I've delved into projects involving face recognition, face detection, and object tracking. I've developed and maintained deep learning models using tools such as TensorFlow, Keras, and OpenCV.I've also delved into the world of Raspberry Pi, developing AI models for real-world applications. My passion for AI is fueled by its potential to revolutionize industries and enhance everyday life.
+                            As an Artificial Intelligence developer at  Perdita software technologies Pvt Ltd, I've delved into projects involving face recognition, face detection, and object tracking. I've developed and maintained deep learning models using tools such as TensorFlow, Keras, and OpenCV.I've also delved into the world of Raspberry Pi, developing AI models for real-world applications. My passion for AI is fueled by its potential to revolutionize industries and enhance everyday life.
                         </p>
                         <button class="btn-rounded btn btn-outline-primary mt-4">
                             <a href="https://drive.google.com/file/d/1yAe5eKnYNXYBq4yub5igA2zHoLeluGoD/view?usp=sharing" style="text-decoration: none; color: inherit;" target="_blank"> Download & View CV </a>
@@ -648,19 +648,20 @@
                         </li>
 
                         <!-- <li style="--accent-color:#695aa6">
-                            <div class="date">2018-2021</div>
-                            <div class="title">Bachelor's of Science (Physics)</div>
+                            <div class="date">2013-2015</div>
+                            <div class="title">Master of Computer Application (MCA)</div>
                             <div class="descr">Savitribai Phule Pune University
                                 <br>
                                 with 77%
                             </div>
                         </li>
                         <li style="--accent-color:#C147E9">
-                            <div class="date">Jun 2020 - Jan 2021</div>
+                            <div class="date">Jun 2020 - Dec 2020/div>
                             <div class="title">Post-Graduation Diploma in Data Science and Machine learning</div>
                             <div class="descr">The Knowledge Cafe</div>
                         </li>
-                        <li style="--accent-color:#810CA8">
+                        
+                       <!-- <li style="--accent-color:#810CA8">
                             <div class="date">May-2022</div>
                             <div class="title"><a href="https://www.kaggle.com/learn/certification/mayurphatangare/intro-to-machine-learning">Intro to Machine Learning.</a></div>
                             <div class="descr">Certification</div>
@@ -677,28 +678,28 @@
                     <ul class="experience__timeline">
                         <li style="--accent-color:#695aa6" class="circle-experience">
                             <div class="date-circle work-circle1">
-                                <div class="date">May 2023 - Present</div>
+                                <div class="date">Sep 2022 - Present</div>
                                 <div class="title_">Artificial Intelligence Developer</div>
-                                <div class="descr">Navintaa</div>
+                                <div class="descr"> Perdita software technologies Pvt Ltd</div>
                             </div>
                         </li>
-                        <li style="--accent-color:#695aa6" class="circle-experience">
+                      <!--  <li style="--accent-color:#695aa6" class="circle-experience">
                             <div class="date-circle work-circle2">
                                 <div class="date">Jun 2022 - Feb 2023</div>
                                 <div class="title_"> Artificial Intelligence Developer</div>
                                 <div class="descr">Quantian Technologies</div>
                             </div>
-                        </li>
+                        </li>-->
                         <li style="--accent-color:#695aa6" class="circle-experience">
                             <div class="date-circle work-circle3">
-                                <div class="date">May 2021 - May 2022</div>
+                                <div class="date">May 2022 - Aug 2022</div>
                                 <div class="title_">Data Scientist : intern</div>
                                 <div class="descr">Inartigence.ai</div>
                             </div>
                         </li>
                         <li style="--accent-color:#695aa6" class="circle-experience">
                             <div class="date-circle work-circle4">
-                                <div class="date">Feb 2021 - April 2021</div>
+                                <div class="date">Jan 2022 - April 2022</div>
                                 <div class="title_">Data Annotator : intern</div>
                                 <div class="descr">Inartigence.ai</div>
                             </div>
