--- a/index.html
+++ b/index.html
@@ -621,8 +621,8 @@
                         <!-- Inside the <ul class="experience__timeline"> tag -->
                         <li style="--accent-color:#695aa6" class="circle-experience">
                             <div class="date-circle education-circle1">
-                                <div class="date"> 2018 - 2021 </div>
-                                <div class="title_">Bachelor's of Science (Physics)</div>
+                                <div class="date"> 2013 - 2015 </div>
+                                <div class="title_">Master of Computer Application (MCA)</div>
                                 <div class="descr">Savitribai Phule Pune University
                                     <br>
                                     with 77%
@@ -631,7 +631,7 @@
                         </li>
                         <li style="--accent-color:#695aa6" class="circle-experience">
                             <div class="date-circle education-circle2">
-                                <div class="date">Jun 2020 - Jan 2021</div>
+                                <div class="date">Jun 2020 - Dec 2020</div>
                                 <div class="title1">Post-Graduation Diploma <br>in Data Science and Machine learning</div>
                                 <div class="descr">The Knowledge Cafe
                                     <br>
@@ -639,7 +639,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li style="--accent-color:#695aa6" class="circle-experience">
+                        <!--  <li style="--accent-color:#695aa6" class="circle-experience">
                             <div class="date-circle education-circle3" >
                                 <div class="date">May - 2022</div>
                                 <div class="title_"><a href="https://www.kaggle.com/learn/certification/mayurphatangare/intro-to-machine-learning"><u>Intro to Machine Learning</u></a></div>
@@ -647,7 +647,7 @@
                             </div>
                         </li>
 
-                        <!-- <li style="--accent-color:#695aa6">
+                       <li style="--accent-color:#695aa6">
                             <div class="date">2013-2015</div>
                             <div class="title">Master of Computer Application (MCA)</div>
                             <div class="descr">Savitribai Phule Pune University
@@ -676,6 +676,21 @@
                 <div class="experience__content" id="work-content">
                     <!-- <h3 class="experience__subheading">Work Timeline</h3> -->
                     <ul class="experience__timeline">
+                         <li style="--accent-color:#695aa6" class="circle-experience">
+                            <div class="date-circle work-circle4">
+                                <div class="date">Jan 2022 - April 2022</div>
+                                <div class="title_">Data Annotator : intern</div>
+                                <div class="descr">Inartigence.ai</div>
+                            </div>
+                        </li>
+                         <li style="--accent-color:#695aa6" class="circle-experience">
+                            <div class="date-circle work-circle3">
+                                <div class="date">May 2022 - Aug 2022</div>
+                                <div class="title_">Data Scientist : intern</div>
+                                <div class="descr">Inartigence.ai</div>
+                            </div>
+                        </li>
+                       
                         <li style="--accent-color:#695aa6" class="circle-experience">
                             <div class="date-circle work-circle1">
                                 <div class="date">Sep 2022 - Present</div>
@@ -690,20 +705,7 @@
                                 <div class="descr">Quantian Technologies</div>
                             </div>
                         </li>-->
-                        <li style="--accent-color:#695aa6" class="circle-experience">
-                            <div class="date-circle work-circle3">
-                                <div class="date">May 2022 - Aug 2022</div>
-                                <div class="title_">Data Scientist : intern</div>
-                                <div class="descr">Inartigence.ai</div>
-                            </div>
-                        </li>
-                        <li style="--accent-color:#695aa6" class="circle-experience">
-                            <div class="date-circle work-circle4">
-                                <div class="date">Jan 2022 - April 2022</div>
-                                <div class="title_">Data Annotator : intern</div>
-                                <div class="descr">Inartigence.ai</div>
-                            </div>
-                        </li>
+                       
                         <!-- <li style="--accent-color:#9370DB">
                             <div class="date">May 2021 - May 2022</div>
                             <div class="title">Data Scientist : intern</div>
